# flatris

./: .gitignore  cabal.project  flatris.cabal  stack.yaml
